# polyglot-commerce

./: .gitignore  README.md
.github/workflows/: ci.yml
api/: openapi.yaml
go/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
go/cmd/server/: main.go
go/internal/auth/: auth_test.go  handler.go  jwt.go  middleware.go  models.go  password.go  repo.go
go/internal/cart/: handler.go  models.go  repo.go
go/internal/catalog/: handler.go  models.go  repo.go
go/internal/config/: config.go
go/internal/db/: db.go
go/internal/httpx/: httpx.go  middleware.go
go/internal/orders/: handler.go  models.go  repo.go
go/internal/pagination/: pagination.go
go/internal/server/: server.go
go/migrations/: 0002_catalog.sql  embed.go
python/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
python/app/: config.py  db.py  deps.py  errors.py  main.py  observability.py  pagination.py  schemas.py  security.py
python/app/routers/: auth.py  cart.py  orders.py  products.py
python/migrations/: 0001_auth.sql  0003_cart_orders.sql
python/tests/: test_security.py
rust/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust/common/: Cargo.toml
rust/common/src/: auth.rs  db.rs  env.rs  error.rs  http.rs  lib.rs  pagination.rs  telemetry.rs
rust/server/: Cargo.toml
rust/server/migrations/: 0001_auth.sql  0002_catalog.sql  0003_cart_orders.sql
rust/server/src/: config.rs  main.rs  router.rs  state.rs
rust/server/src/auth/: handlers.rs  mod.rs  models.rs  repo.rs
rust/server/src/cart/: handlers.rs  mod.rs  models.rs  repo.rs
rust/server/src/orders/: handlers.rs  mod.rs  models.rs  repo.rs
rust/server/src/products/: cache.rs  handlers.rs  mod.rs  models.rs  repo.rs
