[workspace]
resolver = "2"
members = ["common", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["E-Commerce Backend (Rust)"]
repository = "https://github.com/your-handle/ecommerce-backend"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["limit", "timeout", "load-shed"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout", "request-id", "util", "catch-panic", "compression-gzip", "sensitive-headers"] }
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
validator = { version = "0.18", features = ["derive"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
