[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
validator.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
dotenvy.workspace = true
