[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Production-grade e-commerce backend (Rust / axum)"

[[bin]]
name = "ecommerce"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
validator.workspace = true
redis.workspace = true

[dev-dependencies]
tokio.workspace = true
